2015-05-01  Jiang Jiang  <gzjjgod@gmail.com>

	* cidtype0.c, cidtype0.h, cid.c: Combine all Type 0 open functions
	into one. Simplify some implementations.

2015-04-27  Jiang Jiang  <gzjjgod@gmail.com>

	* cidtype0.c: Fix TTC support for Type 1 Composite and Type 0 fonts.

2015-04-27  Jiang Jiang  <gzjjgod@gmail.com>

	* dpxfile.c: Ignore empty file in filetype checking.

2015-04-26  Jiang Jiang  <gzjjgod@gmail.com>

	* cidtype0.c, cidtype2.c: Support loading CID type 0 font from
	TrueType Collection.

	* truetype.c: Fix offset in offset for TrueType loading.

2015-04-25  Jiang Jiang  <gzjjgod@gmail.com>

	* cff_dict.c: Be more permissive in CFF dict parsing, fix Yuppy SC
	and Yuppy TC fonts support.

2015-04-25  Jiang Jiang  <gzjjgod@gmail.com>

	* sfnt.c: Fix Mac TrueType font support.
	  bug found by Richard Koch <richardmoncriefkoch@icloud.com>.

2015-04-21  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* dvi.c, tt_cmap.c: Fixed a dfont bug, from Akira,
	  bug found by Dohyun Kim <nomosnomos@gmail.com>.

2015-04-19  Shunsaku Hirata  <shunsaku.hirata74@gmail.com>

	* pngimage.c: Ask libpng to do gamma correction with assumed
	screen gamma 2.2.

2015-04-12  Shunsaku Hirata  <shunsaku.hirata74@gmail.com>

	* pdfobj.c:  Fix some problems in reading cross-reference streams.
	* pngimage.c: Support PNG gAMA chunk.
	* jpegimage.c: Various fixes in handling JPEG Exif data
	(possible overflow and buffer overrun), adjusting indent and spaces.
	* jp2image.c: JPEG2000 opacity channel support.
	* pdfcolor.c: Update for PDF 1.7 in pdfcolor.c.

2015-04-05  Shunsaku Hirata  <shunsaku.hirata74@gmail.com>

	* pngimage.c: XMP Metadata support for PNG images.

2015-03-27  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* mfileio.[ch]: Use mfgets() parameters as for fgets().

2015-03-24  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* bmpimage.c, dpxcrypt.c, dvi.c, fontmap.[ch], jpegimage.c,
	pdfcolor.[ch], pdfdev.[ch], pdfdoc.c, pdfdraw.c, spc_tpic.c,